--- a/www/index.html
+++ b/www/index.html
@@ -19,10 +19,10 @@
 		</div>
 	</div>
 
-	<h3>Compila i campi sottostanti per il soffitto radiante Leonardo</h3>
+	<h3>Compila i campi sottostanti per il soffitto radiante Leonardo.</h3>
 
 
-	<form action="/cgi-bin/eurotherm/save_file.py" 
+	<form action="/cgi-bin/save_file.py" 
 		  method="post" 
 		  enctype="multipart/form-data">
 
