check web access

--- a/www/done.html
+++ b/www/done.html
@@ -21,5 +21,10 @@
 
 	<h3>Risultati del calcolo tecnico</h3>
 
-
 	<div class="section">
+		<a href="/output/input_leo.dxf" download>Scarica DXF</a>
+		<a href="/output/input_leo.dxf" download>Scarica XLS</a>
+	</div>
+<body>
+
+</html>
