check web access

--- a/www/done.html
+++ b/www/done.html
@@ -23,7 +23,7 @@
 
 	<div class="section">
 		<a href="/output/input_leo.dxf" download>Scarica DXF</a>
-		<a href="/output/input_leo.dxf" download>Scarica XLS</a>
+		<a href="/output/input.xlsx" download>Scarica XLS</a>
 	</div>
 <body>
 
