--- a/www/done.html
+++ b/www/done.html
@@ -22,8 +22,8 @@
 	<h3>Risultati del calcolo tecnico</h3>
 
 	<div class="section">
-		<a href="/output/input_leo.dxf" download>Scarica DXF</a>
-		<a href="/output/input.xlsx" download>Scarica XLS</a>
+		<p><a href="/output/input_leo.dxf" download>Scarica DXF</a></p>
+		<p><a href="/output/input.xlsx" download>Scarica XLS</a></p>
 	</div>
 <body>
 
