--- a/www/index.html
+++ b/www/index.html
@@ -34,16 +34,16 @@
 		<p><label for="units">Unit&agrave; di misura:</label>
 		<select name="units">
     		<option value="auto">auto</option>
-  			<option value="mm">millimetri</option>
-  			<option value="cm">centimetri</option>
-  			<option value="mt">metri</option>
+  			<option value="0.1">millimetri</option>
+  			<option value="1">centimetri</option>
+  			<option value="100">metri</option>
 		</select>
 
 	</div>
 	<div class="section">
 		<h4>2. Seleziona dettagli impianto</h4>
 			<p id="ra"><input type="radio" checked="yes" name="head" value="heat" /> Solo riscaldamento
-  			<p id="ra"><input type="radio" checked="no" name="head" value="heat" /> Solo riscaldamento
+  			<p id="ra"><input type="radio" checked="no" name="head" value="heat" /> Solo raffrescamento 
 		<p id="ra">
 		<label for="regulator">Regolazione:</label>
 		<select name="regulator">
