--- a/www/index.html
+++ b/www/index.html
@@ -43,13 +43,13 @@
 	<div class="section">
 		<h4>2. Seleziona dettagli impianto</h4>
 			<p id="ra"><input type="radio" checked="yes" name="head" value="heat" /> Solo riscaldamento
-  			<p id="ra"><input type="radio" checked="no" name="head" value="heat" /> Solo raffrescamento 
+  			<p id="ra"><input type="radio" checked="no" name="head" value="heat" /> Riscaldamento/raffrescamento 
 		<p id="ra">
-		<label for="regulator">Regolazione:</label>
+		<label for="regulator">Tipologia:</label>
 		<select name="regulator">
     		<option value="L55">Leonardo 5,5</option>
   			<option value="L35">Leonardo 3,5</option>
-  			<option value="L35p">Leonardo 3, 5 plus</option>
+  			<option value="L35p">Leonardo 3,5 plus</option>
 		</select>
 	</div>
 	<div class="section">
