--- a/www/done.html
+++ b/www/done.html
@@ -19,9 +19,8 @@
 		</div>
 	</div>
 
-	<h3>Risultati del calcolo tecnico</h3>
-
 	<div class="section">
+		<h4>Risultati ultimo calcolo tecnico</h4>
 		<p><a href="/output/input_leo.dxf" download>Scarica DXF</a></p>
 		<p><a href="/output/input.xlsx" download>Scarica XLS</a></p>
 	</div>
