--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
 	<title>Eurotherm Leonardo Planner</title>
 	<link rel="icon" href="/tab_logo.png">
 	<link href="/style.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -19,17 +20,19 @@
 		</div>
 	</div>
 
-	<h3>Compila i campi sottostanti per il soffitto radiante Leonardo.</h3>
+	<h3>Compila i campi sottostanti per il soffitto radiante Leonardo</h3>
 
 
 	<form action="/cgi-bin/save_file.py" 
 		  method="post" 
 		  enctype="multipart/form-data">
 
+	<input name="file" id="fileid" hidden/>
+
 	<div class="section">
 		<h4>1. Carica il file formato DXF </h4>
 		<p><label for="filename" id="sel1">Seleziona un file:</label>
-		<input type="file" id="dxfinput" name="filename" value="Ciao" /> </p>
+		<input type="file" id="dxfinput" name="filename" accept="image/x-dxf" /> </p>
 
 		<p><label for="units">Unit&agrave; di misura:</label>
 		<select name="units">
@@ -67,6 +70,14 @@
 	<button id="submit" type="submit">Calcola</button>
 	</form>
 
+	<script>
+
+		document.getElementById("dxfinput").onchange = function () {
+			fileref = document.getElementById("fileid");
+			fileref.value = this.value.replace(/.*[\/\\]/, '');
+		};
+
+	</script>
 </body>
 
 </html>
