Fixed web interface

--- a/www/done.html
+++ b/www/done.html
@@ -21,8 +21,8 @@
 
 	<div class="section">
 		<h4>Risultati ultimo calcolo tecnico</h4>
-		<p><a href="/output/input_leo.dxf" download>Scarica DXF</a></p>
-		<p><a href="/output/input.xlsx" download>Scarica XLS</a></p>
+		<p><a href="/output/output.dxf" download>Scarica DXF</a></p>
+		<p><a href="/output/output.xlsx" download>Scarica XLS</a></p>
 	</div>
 <body>
 
