--- a/www/index.html
+++ b/www/index.html
@@ -32,7 +32,7 @@
 	<div class="section">
 		<h4>1. Carica il file formato DXF </h4>
 		<p><label for="filename" id="sel1">Seleziona un file:</label>
-		<input type="file" id="dxfinput" name="filename" accept="image/x-dxf" /> </p>
+		<input type="file" id="dxfinput" name="filename" accept=".dxf" /> </p>
 
 		<p><label for="units">Unit&agrave; di misura:</label>
 		<select name="units">
