--- a/www/loading.html
+++ b/www/loading.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<meta http-equiv="refresh" content="3;url=http://eurotherm.ddns.net/cgi-bin/show_file.py" />
+	<meta http-equiv="refresh" content="3;url=/cgi-bin/show_file.py" />
 </head>
 <body>
 <p>Leonardo Planner sta elaborando il vostro progetto</p>
