Web inferface updated with panel type selection

--- a/www/index.html
+++ b/www/index.html
@@ -48,11 +48,11 @@
 			<p id="ra"><input type="radio" checked="yes" name="head" value="heat" /> Solo riscaldamento
   			<p id="ra"><input type="radio" checked="no" name="head" value="heat" /> Riscaldamento/raffrescamento 
 		<p id="ra">
-		<label for="regulator">Tipologia:</label>
-		<select name="regulator">
-    		<option value="L55">Leonardo 5,5</option>
-  			<option value="L35">Leonardo 3,5</option>
-  			<option value="L35p">Leonardo 3,5 plus</option>
+		<label for="ptype">Tipologia:</label>
+		<select name="ptype">
+    		<option value="55">Leonardo 5,5</option>
+  			<option value="35">Leonardo 3,5</option>
+  			<option value="35p">Leonardo 3,5 plus</option>
 		</select>
 	</div>
 	<div class="section">
