--- a/www/done.html
+++ b/www/done.html
@@ -5,8 +5,8 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Eurotherm Leonardo Planner</title>
-	<link rel="icon" href="/tab_logo.png">
-	<link href="/style.css" rel="stylesheet">
+	<link rel="icon" href="../tab_logo.png">
+	<link href="../style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
 	<div class="header">
 		<div class="container">
 			<h1>
-			<img src="/logo.png" alt="">
+			<img src="logo.png" alt="">
 			LEONARDO PLANNER</h1>
 		</div>
 	</div>
