--- a/www/index.html
+++ b/www/index.html
@@ -5,8 +5,8 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Eurotherm Leonardo Planner</title>
-	<link rel="icon" href="/tab_logo.png">
-	<link href="/style.css" rel="stylesheet">
+	<link rel="icon" href="tab_logo.png">
+	<link href="style.css" rel="stylesheet">
 
 </head>
 
@@ -23,7 +23,7 @@
 	<h3>Compila i campi sottostanti per il soffitto radiante Leonardo</h3>
 
 
-	<form action="/cgi-bin/save_file.py" 
+	<form action="cgi-bin/save_file.py" 
 		  method="post" 
 		  enctype="multipart/form-data">
 
@@ -69,6 +69,7 @@
 
 	<button id="submit" type="submit">Calcola</button>
 	</form>
+	<p><a href="cgi-bin/show_file.py">Risultati precedenti</a></p>
 
 	<script>
 
