--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
 	<div class="header">
 		<div class="container">
 			<h1>
-			<img src="/logo.png" alt="">
+			<img src="logo.png" alt="">
 			LEONARDO PLANNER</h1>
 		</div>
 	</div>
