Change in panels.dxf

--- a/www/index.html
+++ b/www/index.html
@@ -52,7 +52,7 @@
 		<select name="ptype">
     		<option value="55">Leonardo 5,5</option>
   			<option value="35">Leonardo 3,5</option>
-  			<option value="35p">Leonardo 3,5 plus</option>
+  			<option value="30">Leonardo 3,0 plus</option>
 		</select>
 	</div>
 	<div class="section">
