Archive and contacts pages added

--- a/www/done.html
+++ b/www/done.html
@@ -18,9 +18,14 @@
 			LEONARDO PLANNER</h1>
 		</div>
 	</div>
-
-	<div class="section">
-		<h4>Risultati ultimo calcolo tecnico</h4>
-		<p><a href="/output/output.dxf" download>Scarica DXF</a></p>
-		<p><a href="/output/output.xlsx" download>Scarica XLS</a></p>
+	
+	<div class="navmenu">
+		<ul>
+			<li><a href="../index.html">Home</a></li> 
+			<li><a href="show_file.py">Risultati</a></li>
+			<li><a href="archive.py">Archivio</a></li>
+			<li><a href="../contacts.html">Contatti</a></li>
+		</ul>
 	</div>
+
+
