Server interface improvements

--- a/www/done.html
+++ b/www/done.html
@@ -7,6 +7,15 @@
 	<title>Eurotherm Leonardo Planner</title>
 	<link rel="icon" href="../tab_logo.png">
 	<link href="../style.css" rel="stylesheet">
+
+	<script>
+	function show_selected(item) {
+		filename = item.getElementsByTagName('elem')[0].innerHTML
+		window.location.href = 'show_file.py?filename='+filename		
+	}
+		
+	</script>
+
 </head>
 
 <body>
@@ -14,7 +23,7 @@
 	<div class="header">
 		<div class="container">
 			<h1>
-			<img src="logo.png" alt="">
+			<img src="../logo.png" alt="">
 			LEONARDO PLANNER</h1>
 		</div>
 	</div>
