--- a/www/done.html
+++ b/www/done.html
@@ -13,7 +13,7 @@
 		filename = item.getElementsByTagName('elem')[0].innerHTML
 		window.location.href = 'show_file.py?filename='+filename		
 	}
-		
+
 	</script>
 
 </head>
@@ -33,7 +33,7 @@
 			<li><a href="../index.html">Home</a></li> 
 			<li><a href="show_file.py">Risultati</a></li>
 			<li><a href="archive.py">Archivio</a></li>
-			<li><a href="../contacts.html">Contatti</a></li>
+			<li><a href="https://www.eurotherm.info/it/contatti">Contatti</a></li>
 		</ul>
 	</div>
 
