--- a/www/index.html
+++ b/www/index.html
@@ -60,7 +60,7 @@
     		<li><a href="index.html">Home</a></li>
 			<li><a href="cgi-bin/show_file.py">Risultati</a></li>
     		<li><a href="cgi-bin/archive.py">Archivio</a></li>
-    		<li><a href="contacts.html">Contatti</a></li>
+    		<li><a href="https://www.eurotherm.info/it/contatti">Contatti</a></li>
 		</ul>
 	</div>
 
