--- a/www/index.html
+++ b/www/index.html
@@ -61,6 +61,7 @@
 			<li><a href="cgi-bin/show_file.py">Risultati</a></li>
     		<li><a href="cgi-bin/archive.py">Archivio</a></li>
     		<li><a href="https://www.eurotherm.info/it/contatti">Contatti</a></li>
+    		<li style="float: right; width: 50px;"><a href="logout">Logout</a></li>
 		</ul>
 	</div>
 
