--- a/www/index.html
+++ b/www/index.html
@@ -53,6 +53,11 @@
 			<img src="logo.png" alt="">
 			LEONARDO PLANNER</h1>
 		</div>
+
+		<div class="container">
+			<h2>EXPERIMENTAL VERSION</h2>
+		</div>
+
 	</div>
 
 	<div class="navmenu">
