--- a/www/index.html
+++ b/www/index.html
@@ -106,6 +106,13 @@
   			<option value="35">Leonardo 3,5</option>
   			<option value="30">Leonardo 3,0 plus</option>
 		</select>
+		<p id="clt">
+		<label for="ptype">Regolazione:</label>
+		<select name="control">
+    		<option value="reg">Con regolazione</option>
+  			<option value="noreg">Senza regolazione</option>
+		</select>
+		</p>
 	</div>
 	<div class="section" style="display:none" id="reg">
 		<h4>3. Trattamento Aria</h4>
