--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,19 @@
 			return true
 		}
 
+		function show_client()
+		{
+			var mydiv = document.getElementById("client");
+			mydiv.style.display = 'none';
+		}
+
+		function hide_client()
+		{
+			var mydiv = document.getElementById("client");
+			mydiv.style.display = 'block';
+		}
+
+
 	</script>
 </head>
 
@@ -83,21 +96,7 @@
 	<input name="file" id="fileid" hidden/>
 
 	<div class="section">
-		<h4>1. Carica il file formato DXF </h4>
-		<p><label for="filename" id="sel1">Seleziona un file:</label>
-		<input type="file" id="dxfinput" name="filename" accept=".dxf" /> </p>
-
-		<p><label for="units">Unit&agrave; di misura:</label>
-		<select name="units">
-    		<option value="auto">auto</option>
-  			<option value="0.1">millimetri</option>
-  			<option value="1">centimetri</option>
-  			<option value="100">metri</option>
-		</select>
-
-	</div>
-	<div class="section">
-		<h4>2. Seleziona dettagli impianto</h4>
+		<h4>Seleziona dettagli impianto</h4>
 			<p id="ra"><input type="radio" checked="yes" name="head" value="warm" onchange="hide_div()"/>Solo riscaldamento</p>
   			<p id="ra"><input type="radio"  name="head" value="cold" onchange="show_div()"/>Riscaldamento/raffrescamento </p>
 		<label for="ptype">Tipologia:</label>
@@ -115,7 +114,7 @@
 		</p>
 	</div>
 	<div class="section" style="display:none" id="reg">
-		<h4>3. Trattamento Aria</h4>
+		<h4>Trattamento Aria</h4>
 
 		<!--label for="regulator">Regolazione:</label>
 		<select name="regulator">
@@ -146,6 +145,34 @@
 		<label for="height">Altezza media in metri:</label>
 		<input type="text" id="height" name="height" value="2.7">
 		</p>
+
+	</div>
+	<div class="section">
+		<h4>Seziona servizio di posa EURASS:</h4>
+		<p id="ra"><input type="radio" checked="yes" name="laid" value="without" onchange="show_client()" />Senza Posa</p>
+  		<p id="ra"><input type="radio"  name="laid" value="with" onchange="hide_client()"/>Con Posa</p>
+
+		<div id="client" style="display:none">
+			<p><label for="cli_name">Cliente:</label>
+			<input type="text" id="cli_name" name="cname" value="Nome Cliente"> </p>
+			<p><label for="cli_address">Indirizzo Cantiere:</label>
+			<input type="text" id="cli_address" name="caddr" value="Indirizzo"></p>
+			<p><label for="cli_company">Agenzia:</label>
+			<input type="text" id="cli_company" name="ccomp" value="Nome Agenzia"></p>
+		</div>
+	</div>
+	<div class="section">
+		<h4>Carica il file formato DXF </h4>
+		<p><label for="filename" id="sel1">Seleziona un file:</label>
+		<input type="file" id="dxfinput" name="filename" accept=".dxf" /> </p>
+
+		<p><label for="units">Unit&agrave; di misura:</label>
+		<select name="units">
+    		<option value="auto">auto</option>
+  			<option value="0.1">millimetri</option>
+  			<option value="1">centimetri</option>
+  			<option value="100">metri</option>
+		</select>
 
 	</div>
 
