--- a/www/index.html
+++ b/www/index.html
@@ -61,16 +61,7 @@
 
 
 	<div class="header">
-		<div class="container">
-			<h1>
-			<img src="logo.png" alt="">
-			LEONARDO PLANNER</h1>
-		</div>
-
-		<div class="container">
-			<h2>EXPERIMENTAL VERSION</h2>
-		</div>
-
+			<img src="banner.png" alt="">
 	</div>
 
 	<div class="navmenu">
