--- a/www/index_eng.html
+++ b/www/index_eng.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="it">
+<html lang="eng">
 
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -116,15 +116,15 @@
 	<div class="navmenu">
 		<ul>
     		<li><a href="index.html">Home</a></li>
-			<li><a href="cgi-bin/show_file.py">Risultati</a></li>
-    		<li><a href="cgi-bin/archive.py">Archivio</a></li>
-    		<li><a href="https://www.eurotherm.info/it/contatti">Contatti</a></li>
+			<li><a href="cgi-bin/show_file.py">Results</a></li>
+    		<li><a href="cgi-bin/archive.py">Archive</a></li>
+    		<li><a href="https://www.eurotherm.info/it/contatti">Contacts</a></li>
     		<li style="float: right; width: 50px;"><a href="logout">Logout</a></li>
 		</ul>
 	</div>
 
 
-	<h3>Compila i campi sottostanti per il soffitto radiante Leonardo</h3>
+	<h3>Fill up the fields below for Leornardo radiant ceiling</h3>
 
 	<form action="cgi-bin/save_file.py" 
 		  method="post" 
@@ -136,35 +136,35 @@
 	<input name="file" id="fileid" hidden/>
 
 	<div class="section">
-		<h4>Seleziona dettagli impianto</h4>
+		<h4>Select system details</h4>
 			<!--p id="ra"><input type="radio" checked="yes" id="radio" name="head" value="warm" onchange="warm()">Solo riscaldamento</p-->
   			<!--p id="ra"><input type="radio"  name="head" id="radio" value="cold" onchange="cold()"=>Riscaldamento/raffrescamento </p-->
-		<label for="ptype">Tipologia:</label>
+		<label for="ptype">Tipology:</label>
 		<select name="ptype">
     		<option value="55">Leonardo 5,5</option>
   			<option value="35">Leonardo 3,5</option>
   			<option value="30">Leonardo 3,0 plus</option>
 		</select>
 		<p id="clt">
-		<label for="ptype">Regolazione:</label>
+		<label for="ptype">Regulation:</label>
 		<!--select name="control" id="control" onchange="update()"-->
 		<select name="control" id="control">
-    		<option value="reg"/>Con regolazione</option>
-  			<option value="noreg"/>Senza regolazione</option>
+    		<option value="reg"/>With regulation</option>
+  			<option value="noreg"/>Without regulation</option>
 		</select>
 		</p>
 
 		<p id="air">
-		<label for="head" id="air_label">Trattamento Aria:</label>
+		<label for="head" id="air_label">Air Treatment:</label>
 		<select name="head" id="head" onchange="update_iface()">
-    		<option value="air">Con trattamento aria</option>
-  			<option value="none">Senza trattamento aria</option>
+    		<option value="air">With air treatment</option>
+  			<option value="none">Without air treatment</option>
 		</select>
 		</p>
 
 	</div>
 	<div class="section" style="display:none" id="reg">
-		<h4>Trattamento Aria</h4>
+		<h4>Air Treatment</h4>
 
 		<!--label for="regulator">Regolazione:</label>
 		<select name="regulator">
@@ -175,58 +175,58 @@
 		</select-->
 
 		<p id="rg">
-		<label for="regulator">Tipologia:</label>
+		<label for="regulator">Tipology:</label>
 		<select name="regulator">
-    		<option value="dehum">Solo deumidificazione</option>
-  			<option value="dehum_int">Deumidificazione e integrazione</option>
-  			<option value="dehum_int_ren">Deumidificazione, integrazione e rinnovo</option>
+    		<option value="dehum">Dehumidification only</option>
+  			<option value="dehum_int">Dehumidification and integration</option>
+  			<option value="dehum_int_ren">Dehumidification, integration e renewal</option>
 		</select>
 		</p>
 
 		<p id=rg">
-		<label for="inst">Installazione:</label>
+		<label for="inst">Installation:</label>
 		<select name="inst">
-    		<option value="vert">Verticale</option>
-  			<option value="horz">Orizzontale</option>
+    		<option value="vert">Vertical</option>
+  			<option value="horz">Horizontal</option>
 		</select>
 		</p>
 
 		<p id=rg">
-		<label for="height">Altezza media in metri:</label>
+		<label for="height">Average height in metres:</label>
 		<input type="text" id="height" name="height" value="2.7">
 		</p>
 
 	</div>
 	<div class="section">
-		<h4>Seziona servizio di posa EURASS:</h4>
-		<p id="ra"><input type="radio" checked="yes" name="laid" value="without" onchange="show_client()" />Senza Posa</p>
-  		<p id="ra"><input type="radio"  name="laid" value="with" onchange="hide_client()"/>Con Posa</p>
+		<h4>Select EURASS installation serveice:</h4>
+		<p id="ra"><input type="radio" checked="yes" name="laid" value="without" onchange="show_client()" />With installation</p>
+  		<p id="ra"><input type="radio"  name="laid" value="with" onchange="hide_client()"/>Without installation</p>
 
 		<div id="client" style="display:none">
-			<p><label for="cli_name">Cliente:</label>
+			<p><label for="cli_name">Client:</label>
 			<input type="text" id="cli_name" name="cname" value="Nome Cliente"> </p>
-			<p><label for="cli_address">Indirizzo Cantiere:</label>
+			<p><label for="cli_address">Address:</label>
 			<input type="text" id="cli_address" name="caddr" value="Indirizzo"></p>
-			<p><label for="cli_company">Agenzia:</label>
+			<p><label for="cli_company">Agency:</label>
 			<input type="text" id="cli_company" name="ccomp" value="Nome Agenzia"></p>
 		</div>
 	</div>
 	<div class="section">
-		<h4>Carica il file formato DXF </h4>
-		<p><label for="filename" id="sel1">Seleziona un file:</label>
+		<h4>Load DXG file</h4>
+		<p><label for="filename" id="sel1">Select file:</label>
 		<input type="file" id="dxfinput" name="filename" accept=".dxf" /> </p>
 
-		<p><label for="units">Unit&agrave; di misura:</label>
+		<p><label for="units">Units:</label>
 		<select name="units">
     		<option value="auto">auto</option>
-  			<option value="0.1">millimetri</option>
-  			<option value="1">centimetri</option>
-  			<option value="100">metri</option>
+  			<option value="0.1">millimetres</option>
+  			<option value="1">centimetres</option>
+  			<option value="100">metres</option>
 		</select>
 
 	</div>
 
-	<button id="submit" type="submit">Calcola</button>
+	<button id="submit" type="submit">Compute</button>
 	</form>
 
 
