--- a/www/index_eng.html
+++ b/www/index_eng.html
@@ -199,16 +199,16 @@
 	</div>
 	<div class="section">
 		<h4>Select EURASS installation serveice:</h4>
-		<p id="ra"><input type="radio" checked="yes" name="laid" value="without" onchange="show_client()" />With installation</p>
-  		<p id="ra"><input type="radio"  name="laid" value="with" onchange="hide_client()"/>Without installation</p>
+		<p id="ra"><input type="radio" checked="yes" name="laid" value="without" onchange="show_client()" />Without installation</p>
+  		<p id="ra"><input type="radio"  name="laid" value="with" onchange="hide_client()"/>With installation</p>
 
 		<div id="client" style="display:none">
 			<p><label for="cli_name">Client:</label>
-			<input type="text" id="cli_name" name="cname" value="Nome Cliente"> </p>
+			<input type="text" id="cli_name" name="cname" value="Client name"> </p>
 			<p><label for="cli_address">Address:</label>
-			<input type="text" id="cli_address" name="caddr" value="Indirizzo"></p>
+			<input type="text" id="cli_address" name="caddr" value="Address"></p>
 			<p><label for="cli_company">Agency:</label>
-			<input type="text" id="cli_company" name="ccomp" value="Nome Agenzia"></p>
+			<input type="text" id="cli_company" name="ccomp" value="Agency name"></p>
 		</div>
 	</div>
 	<div class="section">
