Count smartpoints over the drawing

--- a/www/index_eng.html
+++ b/www/index_eng.html
@@ -198,7 +198,7 @@
 
 	</div>
 	<div class="section">
-		<h4>Select EURASS installation serveice:</h4>
+		<h4>Select EURASS installation service:</h4>
 		<p id="ra"><input type="radio" checked="yes" name="laid" value="without" onchange="show_client()" />Without installation</p>
   		<p id="ra"><input type="radio"  name="laid" value="with" onchange="hide_client()"/>With installation</p>
 
@@ -207,8 +207,8 @@
 			<input type="text" id="cli_name" name="cname" value="Client name"> </p>
 			<p><label for="cli_address">Address:</label>
 			<input type="text" id="cli_address" name="caddr" value="Address"></p>
-			<p><label for="cli_company">Agency:</label>
-			<input type="text" id="cli_company" name="ccomp" value="Agency name"></p>
+			<p><label for="cli_company">Company:</label>
+			<input type="text" id="cli_company" name="ccomp" value="Company name"></p>
 		</div>
 	</div>
 	<div class="section">
